// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main query child note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "parent": "root",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`main query child note with schema 2`] = `"/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-68269-TqLyK6SINA7U"`;

exports[`main query root note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "parent": "root",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "root",
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`main query root note with schema 2`] = `"/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-68269-7bujEWRZoZsf"`;

exports[`main write 1`] = `
Object {
  "data": undefined,
  "error": [StatusCodeError: 500 - "Internal Server Error"],
}
`;

exports[`schema write simple schema 1`] = `
Object {
  "data": Object {
    "notes": Object {
      "foo": Object {
        "body": "
",
        "children": Array [
          "foo.ch1",
        ],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "foo",
        "id": "foo",
        "parent": "root",
        "schema": Object {
          "moduleId": "foo",
          "schemaId": "foo",
        },
        "title": "Foo",
        "type": "note",
        "updated": "1",
      },
      "foo.ch1": Object {
        "body": "
",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "foo.ch1",
        "id": "foo.ch1",
        "parent": "foo",
        "schema": Object {
          "moduleId": "foo",
          "schemaId": "ch1",
        },
        "title": "Ch1",
        "type": "note",
        "updated": "1",
      },
      "root": Object {
        "body": "
",
        "children": Array [
          "foo",
        ],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "root",
        "id": "root",
        "parent": null,
        "title": "Root",
        "type": "note",
        "updated": "1",
      },
    },
    "schemas": Object {
      "foo": Object {
        "fname": "foo",
        "imports": Array [],
        "root": Object {
          "children": Array [
            "ch1",
          ],
          "id": "foo",
          "parent": "root",
          "title": "foo",
        },
        "schemas": Object {
          "ch1": Object {
            "body": "",
            "children": Array [],
            "created": 1601932944386,
            "data": Object {},
            "desc": "",
            "fname": null,
            "id": "ch1",
            "parent": "foo",
            "title": "ch1",
            "type": "schema",
            "updated": 1601932944386,
          },
          "foo": Object {
            "body": "",
            "children": Array [
              "ch1",
            ],
            "created": 1601932944386,
            "data": Object {},
            "desc": "",
            "fname": null,
            "id": "foo",
            "parent": "root",
            "title": "foo",
            "type": "schema",
            "updated": 1601932944386,
          },
        },
        "version": 1,
      },
      "root": Object {
        "fname": "root",
        "imports": Array [],
        "root": Object {
          "children": Array [],
          "id": "root",
          "parent": "root",
          "title": "root",
        },
        "schemas": Object {
          "root": Object {
            "body": "",
            "children": Array [],
            "created": 1601932944386,
            "data": Object {},
            "desc": "",
            "fname": null,
            "id": "root",
            "parent": "root",
            "title": "root",
            "type": "schema",
            "updated": 1601932944386,
          },
        },
        "version": 1,
      },
    },
  },
  "error": null,
}
`;

exports[`schema write simple schema: wsList 1`] = `
Object {
  "data": Object {
    "data": Object {
      "workspaces": Array [
        "ws:/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-69412-LrI5M5haGMU8",
      ],
    },
    "error": null,
  },
  "error": null,
}
`;
